<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc_fondo"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/llEncabezado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_home"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            />

        <TextView
            android:id="@+id/tvTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/bc_fondo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBotonesMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llEncabezado"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btActividades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="2dp"
            android:layout_below="@+id/tvTexto"
            android:textSize="9sp"
            android:layout_toLeftOf="@id/btBancoHoras"
            android:onClick="onClickRellenarActividades"
            android:background="@drawable/bt_redondo_rojo"
            android:text="@string/actividades"
            />
        <Button
            android:id="@+id/btBancoHoras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="2dp"
            android:layout_below="@+id/tvTexto"
            android:layout_centerHorizontal="true"
            android:textSize="9sp"
            android:gravity="center"
            android:onClick="onClickRellenarBanco"
            android:background="@drawable/bt_redondo_rojo"
            android:text="@string/banco_de_horas"
            />
        <Button
            android:id="@+id/btSalas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="2dp"
            android:layout_below="@+id/tvTexto"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@+id/btBancoHoras"
            android:textSize="9sp"
            android:onClick="onClickRellenarSalas"
            android:background="@drawable/bt_redondo_rojo"
            android:text="@string/salas"
            />
        <Button
            android:id="@+id/btTareas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_below="@+id/tvTexto"
            android:layout_toRightOf="@+id/btSalas"
            android:textSize="9sp"
            android:onClick="onClickRellenarTareasMayores"
            android:background="@drawable/bt_redondo_rojo"
            android:text="@string/tareas"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBotonesTareas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llBotonesMain"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btTareasMayores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="2dp"
            android:layout_below="@+id/tvTexto"
            android:textSize="9sp"
            android:layout_toLeftOf="@id/btBancoHoras"
            android:onClick="onClickRellenarTareasMayores"
            android:background="@drawable/bt_redondo_rojo"
            android:text="@string/tareas_mayores"
            />
        <Button
            android:id="@+id/btTareasMenores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_below="@+id/tvTexto"
            android:layout_centerHorizontal="true"
            android:textSize="9sp"
            android:gravity="center"
            android:onClick="onClickRellenarTareasMenores"
            android:background="@drawable/bt_redondo_rojo"
            android:text="@string/tareas_menores"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llBotonesTareas"
        android:layout_above="@+id/btCrearAnuncio">

        <LinearLayout
            android:id="@+id/llAnuncios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </ScrollView>
    <Button
        android:id="@+id/btCrearAnuncio"
        android:onClick="onClickCrearAnuncio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crear_anuncio"
        android:textColor="@color/white"
        android:background="@drawable/bt_redondo_morado"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>