<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc_fondo"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:textSize="@android:dimen/app_icon_size"
        android:gravity="center"
        android:layout_marginTop="80dp"
        />
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@mipmap/ic_logo_round"
        android:layout_below="@+id/tvLogin"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingBottom="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bt_redondo"
        android:layout_below="@+id/ivLogo"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:hint="@string/contrasena"
        android:maxLength="20"
        android:layout_marginBottom="30dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_password1"
        android:drawableStart="@drawable/ic_password1"
        android:drawablePadding="10dp"
        android:visibility="invisible"
        android:layout_above="@+id/btEntrar"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btEntrar"
        android:onClick="onClickEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:textColor="@color/white"
        android:background="@drawable/bt_redondo_morado"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>