<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bc_fondo"
    tools:context=".CreadorActividadActivity">

    <TextView
        android:id="@+id/tvTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crear_actividad"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/bc_fondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:background="@drawable/bt_redondo_morado"
        android:layout_below="@+id/tvTexto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo"
        android:maxLength="30"
        android:layout_below="@+id/tvTitulo" />

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:background="@drawable/bt_redondo_morado"
        android:layout_below="@+id/etTitulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion"
        android:maxLength="200"
        android:layout_below="@+id/tvDescripcion"/>

    <Button
        android:id="@+id/btCrearAnuncio"
        android:onClick="onClickCrearAnuncio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crear_actividad"
        android:textColor="@color/white"
        android:background="@drawable/bt_redondo_morado"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>